added players and enthusiasts functionality

--- a/src/app/account/settings/account.settings.less
+++ b/src/app/account/settings/account.settings.less
@@ -92,6 +92,20 @@
     }
   }
 
+  .nav-tabs {
+    border-bottom: 3px solid #a3529a
+  }
+  .nav-tabs > li > a:hover {
+    border-color: #969696 #969696 #a3529a
+  }
+  .nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus {
+    color: #fff;
+    cursor: default;
+    background-color: #a3529a;
+    border: 1px solid #a3529a;
+    border-bottom-color: transparent
+  }
+
 }
 
 @media (max-width: 768px) {
