--- a/src/app/account/settings/enthusiasts/account.settings.enthusiasts.tpl.html
+++ b/src/app/account/settings/enthusiasts/account.settings.enthusiasts.tpl.html
@@ -4,139 +4,295 @@
 <div class="panel-collapse" id="personalDetails">
     <div class="panel-body">
         <form name="enthusiastForm" role="form" ng-submit="submit(enthusiastForm)">
-            <div class="row">
-                <div class="col-sm-4 form-group error">
 
+            <div class="row">
+                <div class="col-sm-4 form-group">
                     <input
                             type="text"
                             name="firstName"
                             class="form-control"
                             placeholder="First Name"
                             ng-model="entity.firstName"
-                            minlength="5"
+                            minlength="1"
                             required/>
-
                     <div ng-if="enthusiastForm.firstName.$dirty" ng-messages="enthusiastForm.firstName.$error"
                          class="errorMessages" ng-messages-include="app/shared/errors/errors.messages.tpl.html">
                         <div ng-message="server">{{enthusiastForm.firstName.$error.serverMessage}}</div>
                     </div>
                 </div>
-                <div class="col-sm-2 form-group">
-                    <select class="form-control">
-                        <option>M</option>
-                        <option>F</option>
-                    </select>
-                </div>
-                <div class="col-sm-3 form-group">
-                    <input
-                            type="text"
-                            ng-model="entity.cellPhone"
-                            class="form-control"
-                            placeholder="Cell Phone"/>
-                </div>
-                <div class="col-sm-3 form-group">
-                    <input
-                            type="text"
-                            ng-model="entity.workPhone"
-                            class="form-control"
-                            placeholder="Work Phone"/>
-                </div>
-            </div>
-            <div class="row">
                 <div class="col-sm-4 form-group">
                     <input
                             type="text"
+                            name="lastName"
+                            class="form-control"
+                            placeholder="Last Name"
                             ng-model="entity.lastName"
+                            minlength="1"
+                            required/>
+
+                    <div ng-if="enthusiastForm.lastName.$dirty" ng-messages="enthusiastForm.lastName.$error"
+                         class="errorMessages" ng-messages-include="app/shared/errors/errors.messages.tpl.html">
+                        <div ng-message="server">{{enthusiastForm.lastName.$error.serverMessage}}</div>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="row">
+                <div class="col-sm-4 form-group">
+                    <select name="gender"
                             class="form-control"
-                            placeholder="Last Name"/>
+                            ng-model="entity.gender"
+                            ng-options="gender as gender for gender in genders"
+                            required>
+                        <option value="">Select Gender</option>
+                    </select>
+
+                    <div ng-if="enthusiastForm.gender.$dirty" ng-messages="enthusiastForm.gender.$error"
+                         class="errorMessages" ng-messages-include="app/shared/errors/errors.messages.tpl.html">
+                        <div ng-message="server">{{enthusiastForm.gender.$error.serverMessage}}</div>
+                    </div>
                 </div>
-                <div class="col-sm-2 form-group">
+                <div class="col-sm-4 form-group">
                     <div class="input-group">
-                        <input
-                                type="text"
-                                placeholder="DOB"
-                                ng-model="entity.birthDate"
-                                class="form-control"/>
-                        <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span></div>
+                        <input type="text"
+                               name="birthDate"
+                               class="form-control"
+                               datepicker-popup="MMM d, y"
+                               show-button-bar="false"
+                               ng-model="entity.birthDate"
+                               is-open="birthDatePickerOpened"
+                               placeholder="Date of Birth"
+                               datepicker-options="datePickerOptions"
+                               ng-change="dateTimePickerChanged('birthDatePickerOpened')"
+                               ng-required="true"/>
+
+                        <div ng-if="enthusiastForm.birthDate.$dirty" ng-messages="enthusiastForm.birthDate.$error"
+                             class="errorMessages" ng-messages-include="app/shared/errors/errors.messages.tpl.html">
+                            <div ng-message="server">{{enthusiastForm.birthDate.$error.serverMessage}}</div>
+                        </div>
+                    <span class="input-group-addon" ng-click="openDateTimePicker($event, 'birthDatePickerOpened')"><i
+                            class="glyphicon glyphicon-calendar"></i></span>
+                    </div>
                 </div>
-                <div class="col-sm-5 form-group">
+                <div class="col-sm-4 form-group">
                     <input
-                            type="email"
-                            ng-model="entity.email"
+                            type="text"
+                            name="nationality"
                             class="form-control"
-                            placeholder="Email"/>
+                            placeholder="Nationality"
+                            ng-model="entity.nationality"
+                            minlength="1"
+                            required/>
+
+                    <div ng-if="enthusiastForm.nationality.$dirty" ng-messages="enthusiastForm.nationality.$error"
+                         class="errorMessages" ng-messages-include="app/shared/errors/errors.messages.tpl.html">
+                        <div ng-message="server">{{enthusiastForm.nationality.$error.serverMessage}}</div>
+                    </div>
                 </div>
             </div>
+
             <div class="row">
                 <div class="col-sm-4 form-group">
-                    <input type="text" class="form-control" placeholder="Nationality"/>
+                    <input type="email"
+                           name="email"
+                           class="form-control"
+                           placeholder="Contact Email"
+                           ng-model="entity.email"
+                           required/>
+
+                    <div ng-if="enthusiastForm.email.$dirty" ng-messages="enthusiastForm.email.$error"
+                         class="errorMessages" ng-messages-include="app/shared/errors/errors.messages.tpl.html">
+                        <div ng-message="server">{{enthusiastForm.email.$error.serverMessage}}</div>
+                    </div>
                 </div>
-                <div class="col-sm-5 form-group col-xs-offset-2">
-                    <input type="email" class="form-control" placeholder="Web-URL"/>
-                </div>
-            </div>
-            <div class="row">
                 <div class="col-sm-4 form-group">
-                    <select class="form-control">
-                        <option>Select Country</option>
-                        <option>India</option>
-                        <option>America</option>
-                        <option>China</option>
-                    </select>
+                    <input type="tel"
+                           name="cellPhone"
+                           class="form-control"
+                           placeholder="Cell Phone"
+                           ng-model="entity.cellPhone"
+                           minlength="10"
+                           maxlength="10"
+                           length="10"
+                           required/>
+
+                    <div ng-if="enthusiastForm.cellPhone.$dirty" ng-messages="enthusiastForm.cellPhone.$error"
+                         class="errorMessages" ng-messages-include="app/shared/errors/errors.messages.tpl.html">
+                        <div ng-message="server">{{enthusiastForm.cellPhone.$error.serverMessage}}</div>
+                    </div>
                 </div>
-                <div class="col-sm-5 form-group col-xs-offset-2">
-                    <input type="email" class="form-control" placeholder="Facebook-URL"/>
+                <div class="col-sm-4 form-group">
+                    <input type="tel"
+                           name="workPhone"
+                           class="form-control"
+                           placeholder="Work Phone"
+                           ng-model="entity.workPhone"
+                           minlength="10"
+                           maxlength="10"
+                           length="10"/>
+
+                    <div ng-if="enthusiastForm.workPhone.$dirty" ng-messages="enthusiastForm.workPhone.$error"
+                         class="errorMessages" ng-messages-include="app/shared/errors/errors.messages.tpl.html">
+                        <div ng-message="server">{{enthusiastForm.workPhone.$error.serverMessage}}</div>
+                    </div>
                 </div>
             </div>
+
             <div class="row">
                 <div class="col-sm-6 form-group">
-                    <input type="text" class="form-control" placeholder="Address Line 1"/>
-                </div>
-                <div class="col-sm-5 form-group">
-                    <input type="email" class="form-control" placeholder="Youtube-URL"/>
+                    <input type="text"
+                           name="streetOne"
+                           class="form-control"
+                           placeholder="Address Line 1"
+                           ng-model="entity.streetOne"
+                           minlength="5"
+                           maxlength="70"
+                           required/>
+
+                    <div ng-if="enthusiastForm.streetOne.$dirty" ng-messages="enthusiastForm.streetOne.$error"
+                         class="errorMessages" ng-messages-include="app/shared/errors/errors.messages.tpl.html">
+                        <div ng-message="server">{{enthusiastForm.streetOne.$error.serverMessage}}</div>
+                    </div>
                 </div>
             </div>
+
             <div class="row">
                 <div class="col-sm-6 form-group">
-                    <input type="text" class="form-control" placeholder="Address Line 2"/>
-                </div>
-                <div class="col-sm-5 form-group">
-                    <input type="email" class="form-control" placeholder="Any other-URL"/>
+                    <input type="text"
+                           name="streetTwo"
+                           class="form-control"
+                           placeholder="Address Line 2"
+                           ng-model="entity.streetTwo"/>
+
+                    <div ng-if="enthusiastForm.streetTwo.$dirty" ng-messages="enthusiastForm.streetTwo.$error"
+                         class="errorMessages" ng-messages-include="app/shared/errors/errors.messages.tpl.html">
+                        <div ng-message="server">{{enthusiastForm.streetTwo.$error.serverMessage}}</div>
+                    </div>
                 </div>
             </div>
+
             <div class="row">
                 <div class="col-sm-4 form-group">
-                    <select class="form-control">
-                        <option>Select City</option>
-                        <option>Pune</option>
-                        <option>Mumbai</option>
-                        <option>Banglore</option>
+                    <select name="city"
+                            class="form-control"
+                            ng-model="entity.city"
+                            ng-options="city as city for city in cities"
+                            required>
+                        <option value="">Select City</option>
                     </select>
+
+                    <div ng-if="enthusiastForm.city.$dirty" ng-messages="enthusiastForm.city.$error"
+                         class="errorMessages" ng-messages-include="app/shared/errors/errors.messages.tpl.html">
+                        <div ng-message="server">{{enthusiastForm.city.$error.serverMessage}}</div>
+                    </div>
                 </div>
-                <div class="col-sm-5 form-group col-xs-offset-2">
+                <div class="col-sm-4 form-group">
+                    <select name="state"
+                            class="form-control"
+                            ng-model="entity.state"
+                            ng-options="state as state for state in states"
+                            required>
+                        <option value="">Select State</option>
+                    </select>
+
+                    <div ng-if="enthusiastForm.state.$dirty" ng-messages="enthusiastForm.state.$error"
+                         class="errorMessages" ng-messages-include="app/shared/errors/errors.messages.tpl.html">
+                        <div ng-message="server">{{enthusiastForm.state.$error.serverMessage}}</div>
+                    </div>
+                </div>
+                <div class="col-sm-4 form-group">
+                    <input type="text"
+                           name="pin"
+                           class="form-control"
+                           placeholder="PIN"
+                           ng-model="entity.pin"
+                           maxlength="6"
+                           minlength="6"
+                           length="6"
+                           required/>
+
+                    <div ng-if="enthusiastForm.pin.$dirty" ng-messages="enthusiastForm.pin.$error"
+                         class="errorMessages" ng-messages-include="app/shared/errors/errors.messages.tpl.html">
+                        <div ng-message="server">{{enthusiastForm.pin.$error.serverMessage}}</div>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="row">
+                <div class="col-sm-6 form-group">
+                    <input type="url"
+                           name="facebookUrl"
+                           class="form-control"
+                           placeholder="Facebook URL"
+                           ng-model="entity.facebookUrl"
+                            />
+
+                    <div ng-if="enthusiastForm.facebookUrl.$dirty" ng-messages="enthusiastForm.facebookUrl.$error"
+                         class="errorMessages" ng-messages-include="app/shared/errors/errors.messages.tpl.html">
+                        <div ng-message="server">{{enthusiastForm.facebookUrl.$error.serverMessage}}</div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 form-group">
+                    <input type="url"
+                           name="youtubeUrl"
+                           class="form-control"
+                           placeholder="Youtube URL"
+                           ng-model="entity.youtubeUrl"
+                            />
+
+                    <div ng-if="enthusiastForm.youtubeUrl.$dirty" ng-messages="enthusiastForm.youtubeUrl.$error"
+                         class="errorMessages" ng-messages-include="app/shared/errors/errors.messages.tpl.html">
+                        <div ng-message="server">{{enthusiastForm.youtubeUrl.$error.serverMessage}}</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-sm-6 form-group">
+                    <input type="url"
+                           name="websiteUrl"
+                           class="form-control"
+                           placeholder="Website URL"
+                           ng-model="entity.websiteUrl"
+                            />
+
+                    <div ng-if="enthusiastForm.websiteUrl.$dirty" ng-messages="enthusiastForm.websiteUrl.$error"
+                         class="errorMessages" ng-messages-include="app/shared/errors/errors.messages.tpl.html">
+                        <div ng-message="server">{{enthusiastForm.websiteUrl.$error.serverMessage}}</div>
+                    </div>
+                </div>
+                <div class="col-sm-6 form-group">
+                    <input type="url"
+                           name="otherUrl"
+                           class="form-control"
+                           placeholder="Any other URL"
+                           ng-model="entity.otherUrl"
+                            />
+
+                    <div ng-if="enthusiastForm.otherUrl.$dirty" ng-messages="enthusiastForm.otherUrl.$error"
+                         class="errorMessages" ng-messages-include="app/shared/errors/errors.messages.tpl.html">
+                        <div ng-message="server">{{enthusiastForm.otherUrl.$error.serverMessage}}</div>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="row border-bottom form-group">
+                <div class="col-sm-6 form-group">
                     <div class="input-group">
-                        <input type="text" placeholder="Upload Profile Pic" id="birthDate" class="form-control">
+                        <input type="text" placeholder="Upload Profile Pic" class="form-control">
                         <span class="input-group-addon">Browse</span></div>
                 </div>
-            </div>
-            <div class="row border-bottom form-group">
-                <div class="col-sm-4 form-group">
-                    <select class="form-control">
-                        <option>Select State</option>
-                        <option>Maharastra</option>
-                        <option>Gujrat</option>
-                        <option>Karnatak</option>
-                    </select>
-                </div>
-                <div class="col-sm-2 form-group">
-                    <input type="text" placeholder="PIN" class="form-control">
-                </div>
-                <div class="col-sm-5 form-group">
+                <div class="col-sm-6 form-group">
                     <div class="input-group">
                         <input type="text" placeholder="Upload Gallery Pic" class="form-control">
                         <span class="input-group-addon">Browse</span></div>
                 </div>
             </div>
+
             <div class="row">
                 <div class="col-sm-12 form-group">
                     <button type="submit" class="btn btn-primary">{{entity._id ? 'Update' : 'Save'}}</button>
