--- a/src/app/shared/errors/errors.messages.tpl.html
+++ b/src/app/shared/errors/errors.messages.tpl.html
@@ -1,4 +1,6 @@
 <div ng-message="required">This field is required</div>
 <div ng-message="minlength">This field is too short</div>
 <div ng-message="maxlength">This field is too long</div>
+<div ng-message="min">This field value is less</div>
+<div ng-message="max">This field value is more</div>
 <div ng-message="email">This is an invalid email address</div>
