--- a/src/app/account/settings/account.settings.less
+++ b/src/app/account/settings/account.settings.less
@@ -92,6 +92,11 @@
     }
   }
 
+  .add-sport {
+    padding: 5px;
+    display: block;
+  }
+
   .nav-tabs {
     border-bottom: 3px solid #a3529a
   }
@@ -108,7 +113,7 @@
 
 }
 
-@media (max-width: 768px) {
+@media (max-width: 992px) {
 
   .account-settings {
 
