--- a/src/app/account/settings/coaches/account.settings.coaches.tpl.html
+++ b/src/app/account/settings/coaches/account.settings.coaches.tpl.html
@@ -551,11 +551,10 @@
 
                             </div>
                         </tab>
-                        <tab select="addTab(coachForm, 'sports')">
-                            <tab-heading>
-                                <span class="add-sport"><i class="glyphicon glyphicon-plus-sign"></i> Add Sport</span>
-                            </tab-heading>
-                        </tab>
+                        <tab-heading>
+                            <a ng-click="addTab(coachForm, 'sports')" class="add-sport"><i
+                                    class="glyphicon glyphicon-plus-sign"></i> Add Sport</a>
+                        </tab-heading>
                     </tabset>
                 </div>
 
