--- a/src/app/shared/header/header.less
+++ b/src/app/shared/header/header.less
@@ -103,6 +103,17 @@
     top: 19px;
   }
 
+  .navbar-nav .open .dropdown-menu {
+    background-color: #DCDCC5;
+    padding-bottom: 20px;
+  }
+
+  #zingy-header {
+    .navbar-collapse {
+      width: 200px;
+    }
+  }
+
 }
 
 @media (min-width: 1200px) {
