--- a/src/app/account/settings/account.settings.tpl.html
+++ b/src/app/account/settings/account.settings.tpl.html
@@ -1,14 +1,14 @@
 <div class="account-settings">
     <div class="container form-group banner border-btm">
-        <div class="col-sm-3 col-lg-3 form-group">&nbsp;</div>
-        <div class="col-sm-8 col-lg-8">
+        <div class="col-md-3 col-lg-3 form-group">&nbsp;</div>
+        <div class="col-md-9 col-lg-9">
             <p class="pagging">Hello {{user.displayName}}, Manage your Account details, prefrences & your listings on
                 this page</p>
         </div>
     </div>
     <div class="container">
         <div class="row">
-            <div class="col-sm-3 col-lg-3 account-settings-options">
+            <div class="col-md-3 col-lg-3 account-settings-options">
                 <div class="welcome-block">
                     <a href="/account/manage">
                         <h4 class="panel-title">Account Settings</h4>
@@ -64,11 +64,11 @@
                 </div>
                 <div class="panel-content" ng-if="entityType === 'Offer'" ng-bind-html="listingMessage"></div>
             </div>
-            <div class="col-sm-7 col-lg-7">
+            <div class="col-md-7 col-lg-7">
                 <ng-include src="formTemplate"></ng-include>
             </div>
-            <div class="col-sm-2 col-lg-2 form-group right-ad">
-                Ad
+            <div class="col-md-3 col-lg-3 form-group right-ad">
+                <!--Advertise here-->
             </div>
         </div>
     </div>
