--- a/src/app/account/settings/suppliers/account.settings.suppliers.tpl.html
+++ b/src/app/account/settings/suppliers/account.settings.suppliers.tpl.html
@@ -207,9 +207,11 @@
 
         <div class="row">
             <div class="col-sm-12 form-group">
-                <button type="submit" class="btn btn-primary">{{entity._id ? 'Update' : 'Save'}}</button>
+                <button type="submit"
+                        class="btn btn-primary">{{entity._id ? 'Update' : 'Add Supplier'}}
+                </button>
                 <button type="submit" ng-if="entity._id" ng-click="remove(entity._id)"
-                        class="btn btn-danger pull-right">Remove Listing
+                        class="btn btn-danger pull-right">Remove Supplier
                 </button>
             </div>
         </div>
