--- a/src/app/account/settings/account.settings.less
+++ b/src/app/account/settings/account.settings.less
@@ -12,7 +12,7 @@
     border: 1px solid #C7C7C7;
   }
 
-  .account-settings-options {
+  .account-settings-options, .account-settings-manage {
     .welcome-block {
       margin-bottom: 5px;
       border-radius: 4px;
