--- a/src/app/account/settings/manage/account.settings.manage.tpl.html
+++ b/src/app/account/settings/manage/account.settings.manage.tpl.html
@@ -1,4 +1,4 @@
-<div class="account-settings-options">
+<div class="account-settings-manage">
     <div class="row">
         <div class="col-sm-12 form-group">
             <div class="panel-heading enthusiast">
