fixed ui bugs & code refactoring

--- a/src/app/account/settings/coaches/account.settings.coaches.tpl.html
+++ b/src/app/account/settings/coaches/account.settings.coaches.tpl.html
@@ -135,7 +135,7 @@
                                         <input id="women"
                                                name="women"
                                                type="checkbox"
-                                               ng-model="sport.coachingWomen"/> <label for="men">Women</label>
+                                               ng-model="sport.coachingWomen"/> <label for="women">Women</label>
                                     </div>
                                     <div class="col-sm-3 form-group">
                                         <select name="{{'womenFromAge'+$index}}"
